# A5-Courses

AI/: README.md
AI/AI01/: .gitignore  AI01.ipynb  requirements-colab.txt  requirements.txt
AI/AI01/src/: main.py
AI/AI01/src/modules/: data.py  models.py  train.py
AI/AI02/: .gitignore  Makefile  requirements.txt
AI/AI02/harry_potter_books/txts/: harry_potter_1.txt  harry_potter_2.txt  harry_potter_3.txt  harry_potter_4.txt  harry_potter_5.txt  harry_potter_6.txt  harry_potter_7.txt  remove_page_nums.py
AI/AI02/src/: __main__.py  data.py  models.py  training.py  utils.py
AI/AI03/: .gitignore  requirements.txt
AI/AI03/examples/: dqn_test.py  gym_test.py
AI/AI03/src/: agents.py  deep_q_learning.py  main.py  q_learning.py  utils.py
AI/AI04/: requirements.txt
AI/AI04/src/: main.py
AI/AI04/src/modules/: data.py  train.py
CG/CG01/: .gitignore  CMakeLists.txt  Makefile  README.md
CG/CG01/glad/include/glad/: glad.h
CG/CG01/src/: cube.cc  main.cpp  triangle.cc
CG/CG01/src/include/: callbacks.hh  test.hh
CG/CG01/src/src/: callbacks.cc  test.cc
CG/CG02/shaders/: 001.fs
CG/CG03/shaders/: 001.fs  homework.fs
CG/CG04/: .gitignore
CG/CG04/CG04/Assets/: Pipe.prefab
MDT/: README.md
MDT/MDT01/: README.md
MDT/MDT01/MDT01-Vue/: .gitignore  index.html  package-lock.json  package.json
MDT/MDT01/base-html/: index.html  script.js  style.css
MDT/MDT02/: Makefile
MDT/MDT03/: README.md
MDT/MDT03/src/: index.html  script.js  style.css
MS/: existing_solutions.md  laboratories.md
site_pages/: graph_it.md  profile.md  quick-k8s.md
(+28 files in other folders)
